--- a/res/layout/activity_main_menu.xml
+++ b/res/layout/activity_main_menu.xml
@@ -8,9 +8,28 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainMenuActivity" >
 
-    <TextView
+    <Button
+        android:id="@+id/ReadItToMe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="READ TO ME" />
+
+    <Button
+        android:id="@+id/ReadItMyself"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/ReadItToMe"
+        android:layout_below="@+id/ReadItToMe"
+        android:text="READ IT MYSELF" />
+
+    <Button
+        android:id="@+id/AutoPlay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/ReadItMyself"
+        android:layout_below="@+id/ReadItMyself"
+        android:text="AUTO PLAY" />
 
 </RelativeLayout>
