--- a/res/layout/activity_single_shot.xml
+++ b/res/layout/activity_single_shot.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ctc="http://schemas.android.com/apk/res/com.jogeeks.storynumone"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -8,9 +9,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".SingleSceneActivity" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+    <com.jogeeks.common.ImageMap
+        android:id="@+id/map"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:src="@drawable/ohmileys"
+        ctc:map="ohmiley" />
 
 </RelativeLayout>
