making words pressable with spans

--- a/res/layout/activity_single_shot.xml
+++ b/res/layout/activity_single_shot.xml
@@ -9,8 +9,25 @@
     tools:context=".SingleSceneActivity" >
 
     <TextView
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="43dp"
+        android:layout_marginTop="97dp"
+        android:text="Hello wrold ra3ed  is testing some stuffffffff"
+        android:textSize="25sp" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/textView1"
+        android:layout_below="@+id/textView1"
+        android:layout_marginRight="80dp"
+        android:layout_marginTop="92dp"
+        android:text="TextView"
+        android:textSize="25sp" />
 
 </RelativeLayout>
