--- a/res/layout/activity_single_shot.xml
+++ b/res/layout/activity_single_shot.xml
@@ -1,42 +1,38 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:ctc="http://schemas.android.com/apk/res/com.jogeeks.storynumone"
+    xmlns:map="http://schemas.android.com/apk/res/com.jogeeks.storynumone"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".SingleSceneActivity" >
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="43dp"
-        android:layout_marginTop="97dp"
-        android:text="Hello wrold ra3ed  is testing some stuffffffff"
-        android:textSize="25sp" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/textView1"
-        android:layout_below="@+id/textView1"
-        android:layout_marginRight="80dp"
-        android:layout_marginTop="92dp"
-        android:text="TextView"
-        android:textSize="25sp" />
+<com.jogeeks.pagecurl.CurlView
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent"
+	android:id="@+id/curl" />
 
     <com.jogeeks.common.ImageMap
         android:id="@+id/map"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:src="@drawable/ohmileys"
-        ctc:map="ohmiley" />
+        android:layout_height="fill_parent" 
+        android:layout_margin="5dp"
+        />
 
+    <TextView
+        android:id="@+id/topsubtitle"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:gravity="center"
+        android:textSize="25dp"/>
 
+    
+        <TextView
+        android:id="@+id/bottomsubtitle"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
+        android:textSize="25dp"/>
 </RelativeLayout>
